--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
     </section>
 
-    <section class="instalation">
+    <section class="installation">
       <div class="u-section">
-        <h2 class="u-title">instalation</h2>
+        <h2 class="u-title">installation</h2>
         <p>After importing <span class="u-name">breakpoints</span> into your project, add this at the beginning of your main Sass file:</p>
         <code class="u-code u-code--dark">@import 'path/to/breakpoints/src/index';</code>
       </div>
