--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <body>
     <section class="hero">
-      <div class="hero__content">
+      <div class="hero__content u-section">
         <h1 class="hero__title">breakpoints. made easy.</h1>
         <p class="hero__tagline">Sass mixin for managing breakpoints inside your project with a simple, human-readable syntax.</p>
-        <code class="hero__code u-code">@include breakpoints(from mobile-small to desktop-large)</code>
+        <code class="hero__code u-code"><pre>@include breakpoints(from mobile-small to desktop-large)</pre></code>
 
         <div class="hero__btns">
           <a href="https://github.com/RazvanDH/breakpoints" target="_blank" class="btn--regular btn--primary icon-github">View on Github</a>
@@ -32,15 +32,15 @@
       <div class="u-section">
         <h2 class="u-title">installation</h2>
         <p>After importing <span class="u-name">breakpoints</span> into your project, add this at the beginning of your main Sass file:</p>
-        <code class="u-code u-code--dark">@import 'path/to/breakpoints/src/index';</code>
+        <code class="u-code u-code--dark"><pre>@import 'path/to/breakpoints/src/index';</pre></code>
       </div>
     </section>
 
     <section class="usage">
       <div class="u-section">
         <h2 class="u-title">usage</h2>
-        <code class="u-code usage__example">@include breakpoints(from SMALL-BREAKPOINT to LARGE-BREAKPOINT)</code>
-        <small class="usage__smallprint">Where <span class="u-code u-code--inline">SMALL-BREAKPOINT</span> and <span class="u-code u-code--inline">LARGE-BREAKPOINT</span> can be a value or one of the predefined breakpoints.</small>
+        <code class="u-code usage__example"><pre>@include breakpoints(from SMALL-BREAKPOINT to LARGE-BREAKPOINT)</pre></code>
+        <small class="usage__smallprint">Where <code class="u-code u-code--inline">SMALL-BREAKPOINT</code> and <code class="u-code u-code--inline">LARGE-BREAKPOINT</code> can be a value or one of the predefined breakpoints.</small>
 
         <p>The <span class="u-name">breakpoints</span> mixin makes use of familiar syntax from the English language, such as the prepositions <strong>from</strong> and <strong>to</strong>.
         <p>For easier use, the mixin also comes with a list of predefined breakpoints. There are three types of "devices" (<strong>mobile</strong>, <strong>tablet</strong>, <strong>desktop</strong>), each one has 3 variant sizes (<strong>small</strong>, <strong>medium</strong>, <strong>large</strong>). The breakpoints are a combination of the two (<strong>mobile-small</strong>, <strong>desktop-large</strong>, etc.).</p>
@@ -51,6 +51,7 @@
     <section class="predefined-breakpoints">
       <div class="u-section">
         <h2 class="u-title">predefined breakpoints</h2>
+        <p>The predefined breakpoints are chosen for easier use. If you want to change them, see the <a href="#advanced">advanced</a> section.</p>
         <div class="predefined-breakpoints__lists">
           <ul class="predefined-breakpoints__list">
             <li class="predefined-breakpoints__list-title icon-mobile"></li>
@@ -76,7 +77,7 @@
 
 
     <section class="examples">
-      <div class="u-section">
+      <div class="u-section u-left">
         <h2 class="u-title">examples</h2>
 
 
@@ -120,6 +121,48 @@
     }
   }</pre></code>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="advanced">
+      <div class="u-section u-left">
+        <h2 class="u-title" id="advanced">advanced</h2>
+
+        <div class="advanced__custom-list">
+          <h3 class="u-subtitle">custom list of breakpoints</h3>
+
+          <p>If you want to define your own list of breakpoints, define a map with the name <code class="u-code u-code--inline">$breakpoints-values</code>.</p>
+
+          <code class="u-code u-code--dark u-full-width"><pre>$breakpoints-values: (
+  i-like-small-breakpoints: 150px,
+  weird-breakpoint: 10em,
+  is-this-even-a-breakpoint: 30rem
+);
+
+.example {
+  @include breakpoints(from i-like-small-breakpoints to weird-breakpoints) {
+    // your CSS
+  }
+}</pre></code>
+        </div>
+
+        <div class="advanced__ie8">
+          <h3 class="u-subtitle">ie8 stylesheet</h3>
+
+          <p>If you are building a separate stylesheet for IE8, set the variable <code class="u-code u-code--inline">$breakpoints-ie8</code> in your IE8 only stylesheet after importing the mixin. This will create a stylesheet that ignores all breakpoints that have a maximum value, while dropping the media query for those that don't.</p>
+
+          <code class="u-code u-code--dark u-full-width"><pre>$breakpoints-ie8: true;
+
+.example {
+  @include breakpoints(to desktop-small) {
+    // this will be ignored
+  }
+
+  @include breakpoints(from mobile-small) {
+    // this will be compiled in the IE8 stylesheet without the media query wrapper
+  }
+}</pre></code>
         </div>
       </div>
     </section>
