fixed URLs and added npm

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <code class="hero__code u-code"><pre>@include breakpoint(from mobile-small to desktop-large)</pre></code>
 
         <div class="hero__btns">
-          <a href="https://github.com/RazvanDH/breakpoints" target="_blank" class="btn--regular btn--primary icon-github">View on Github</a>
-          <a href="https://github.com/RazvanDH/breakpoints/zipball/master" class="btn--regular btn--primary icon-archive">Download .zip</a>
-          <a href="https://github.com/RazvanDH/breakpoints/tarball/master" class="btn--regular btn--primary icon-archive">Download .tar.gz</a>
+          <a href="https://github.com/RazvanDH/rs-breakpoints" target="_blank" class="btn--regular btn--primary icon-github">View on Github</a>
+          <a href="https://github.com/RazvanDH/rs-breakpoints/zipball/master" class="btn--regular btn--primary icon-archive">Download .zip</a>
+          <a href="https://github.com/RazvanDH/rs-breakpoints/tarball/master" class="btn--regular btn--primary icon-archive">Download .tar.gz</a>
         </div>
       </div>
     </section>
@@ -33,8 +33,12 @@
     <section class="installation">
       <div class="u-section">
         <h2 class="u-title">installation</h2>
-        <p>After importing <span class="u-name">breakpoints</span> into your project, add this at the beginning of your main Sass file:</p>
-        <code class="u-code u-code--dark"><pre>@import 'path/to/breakpoints/index';</pre></code>
+
+        <h3 class="u-subtitle">with npm</h3>
+        <code class="u-code u-code--dark">npm install rs-breakpoints</code>
+
+        <p>After importing <span class="u-name">rs-breakpoints</span> into your project, add this at the beginning of your main Sass file:</p>
+        <code class="u-code u-code--dark"><pre>@import '/node_modules/rs-breakpoints/index';</pre></code>
       </div>
     </section>
 
